--- a/package.json
+++ b/package.json
@@ -5,17 +5,19 @@
   "dependencies": {
     "antd": "^3.3.0",
     "axios": "^0.18.0",
+    "babel-plugin-import": "^1.8.0",
     "bizcharts": "^3.1.5",
     "lodash": "^4.17.5",
     "react": "^16.3.2",
+    "react-app-rewired": "^1.6.2",
     "react-dom": "^16.3.2",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.1"
+    "react-scripts": "1.1.5"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test --env=jsdom",
     "eject": "react-scripts eject"
   }
 }
