--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "axios": "^0.18.0",
     "babel-plugin-import": "^1.8.0",
     "bizcharts": "^3.1.5",
+    "json-loader": "^0.5.7",
     "lodash": "^4.17.5",
     "react": "^16.3.2",
     "react-app-rewired": "^1.6.2",
     "react-dom": "^16.3.2",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.5"
+    "react-scripts": "1.1.5",
+    "yaml-loader": "^0.5.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
