--- a/package.json
+++ b/package.json
@@ -14,12 +14,28 @@
     "react-dom": "^16.3.2",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.5",
+    "rimraf": "^2.6.2",
+    "swagger-js-codegen": "^1.12.0",
+    "swagger-ts-generator": "^1.1.44",
     "yaml-loader": "^0.5.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build:swagger": "npm-run-all -p clean:swagger build:swaggeri",
+    "build:swaggeri": "node scripts/build_swagger.js",
+    "clean:swagger": "rimraf src/swagger"
+  },
+  "proxy": {
+    "/api": {
+      "target": "https://www.mlmodelscope.org",
+      "ws": true,
+      "secure": false
+    }
+  },
+  "devDependencies": {
+    "npm-run-all": "^4.1.3"
   }
 }
