--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "rimraf": "^2.6.2",
     "swagger-js-codegen": "^1.12.0",
     "swagger-ts-generator": "^1.1.44",
-    "yaml-loader": "^0.5.0"
+    "yaml-loader": "^0.5.0",
+    "yeast": "^0.1.2"
   },
   "scripts": {
     "start": "react-app-rewired start",
