--- a/package.json
+++ b/package.json
@@ -13,10 +13,15 @@
     "react": "^16.5.2",
     "react-app-rewired": "^1.6.2",
     "react-dom": "^16.5.2",
+    "react-helmet": "^5.2.0",
     "react-iframe": "^1.3.2",
+    "react-loadable": "^5.5.0",
+    "react-markdown": "^3.6.0",
+    "react-metrics": "^2.4.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
     "rimraf": "^2.6.2",
+    "styled-components": "^3.4.9",
     "swagger-js-codegen": "^1.12.0",
     "swagger-ts-generator": "^1.1.44",
     "yaml-loader": "^0.5.0",
