--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     }
   },
   "devDependencies": {
-    "npm-run-all": "^4.1.3"
+    "npm-run-all": "^4.1.3",
+    "raw-loader": "^0.5.1"
   }
 }
