--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,5 +51,6 @@
   // Support using flow through your node_modules folder, WARNING: Checking this box is a security risk. When you open a project we will immediately run code contained within it.
   "flow.useNPMPackagedFlow": true,
   // Enable/disable JavaScript validation. (For Flow)
-  "javascript.validate.enable": false
+  "javascript.validate.enable": false,
+  "deepscan.enable": true
 }
