--- a/package.json
+++ b/package.json
@@ -44,6 +44,11 @@
     }
   },
   "devDependencies": {
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.6.1",
+    "eslint-config-prettier": "^3.1.0",
+    "eslint-plugin-flowtype": "^2.50.3",
+    "eslint-plugin-react": "^7.11.1",
     "npm-run-all": "^4.1.3",
     "raw-loader": "^0.5.1"
   }
