--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ibm/plex": "^1.1.6",
     "antd": "^3.9.2",
     "axios": "^0.18.0",
     "babel-plugin-import": "^1.9.1",
