--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "eslint-config-prettier": "^3.1.0",
     "eslint-plugin-flowtype": "^2.50.3",
     "eslint-plugin-react": "^7.11.1",
+    "image-webpack-loader": "^4.3.1",
     "npm-run-all": "^4.1.3",
     "raw-loader": "^0.5.1"
   }
