--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "react-metrics": "^2.4.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.3",
-    "rimraf": "^2.6.2",
     "styled-components": "^3.4.9",
     "swagger-js-codegen": "^1.12.0",
     "swagger-ts-generator": "^1.1.47",
@@ -47,6 +46,7 @@
   "devDependencies": {
     "image-webpack-loader": "^4.3.1",
     "npm-run-all": "^4.1.3",
-    "raw-loader": "^0.5.1"
+    "raw-loader": "^0.5.1",
+    "rimraf": "^2.6.2"
   }
 }
