--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "axios": "^0.18.0",
     "babel-plugin-import": "^1.9.1",
     "bizcharts": "^3.2.4",
+    "http-proxy-middleware": "^0.19.0",
     "idx": "^2.4.0",
     "json-loader": "^0.5.7",
     "lodash": "^4.17.11",
+    "node-sass": "^4.9.3",
     "react": "^16.5.2",
     "react-app-rewired": "^1.6.2",
     "react-dom": "^16.5.2",
@@ -36,17 +38,16 @@
     "build:swaggeri": "node scripts/build_swagger.js",
     "clean:swagger": "rimraf src/swagger"
   },
-  "proxy": {
-    "/api": {
-      "target": "https://www.mlmodelscope.org",
-      "ws": true,
-      "secure": false
-    }
-  },
   "devDependencies": {
     "image-webpack-loader": "^4.3.1",
     "npm-run-all": "^4.1.3",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.6.2"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
