--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lodash": "^4.17.11",
     "node-sass": "^4.9.3",
     "react": "^16.5.2",
+    "react-app-polyfill": "^0.1.3",
     "react-app-rewired": "^1.6.2",
     "react-dom": "^16.5.2",
     "react-helmet": "^5.2.0",
