--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@antv/data-set": "^0.9.6",
     "@ibm/plex": "^1.1.6",
     "antd": "^3.10.0",
     "axios": "^0.18.0",
@@ -10,6 +11,7 @@
     "bizcharts": "^3.2.4",
     "http-proxy-middleware": "^0.19.0",
     "idx": "^2.4.0",
+    "is-promise": "^2.1.0",
     "json-loader": "^0.5.7",
     "lodash": "^4.17.11",
     "node-sass": "^4.9.3",
