--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "json-loader": "^0.5.7",
     "lodash": "^4.17.11",
     "node-sass": "^4.9.4",
+    "merge": ">=1.2.1",
     "react": "^16.5.2",
     "react-app-polyfill": "^0.1.3",
     "react-app-rewired": "^1.6.2",
