--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@antv/data-set": "^0.9.6",
     "@ibm/plex": "^1.2.1",
+    "@uppy/react": "^0.28.0",
     "antd": "^3.10.2",
     "axios": "^0.18.0",
     "babel-plugin-import": "^1.10.0",
@@ -14,8 +15,8 @@
     "is-promise": "^2.1.0",
     "json-loader": "^0.5.7",
     "lodash": "^4.17.11",
-    "node-sass": "^4.9.4",
     "merge": ">=1.2.1",
+    "node-sass": "^4.9.4",
     "react": "^16.5.2",
     "react-app-polyfill": "^0.1.3",
     "react-app-rewired": "^1.6.2",
@@ -30,6 +31,7 @@
     "styled-components": "^4.0.2",
     "swagger-js-codegen": "^1.12.0",
     "swagger-ts-generator": "^1.1.47",
+    "uppy": "^0.28.0",
     "yaml-loader": "^0.5.0",
     "yeast": "^0.1.2"
   },
