--- a/package.json
+++ b/package.json
@@ -3,34 +3,34 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@antv/data-set": "^0.9.6",
+    "@antv/data-set": "^0.10.1",
     "@ibm/plex": "^1.2.1",
     "@uppy/react": "^0.28.0",
-    "antd": "^3.10.2",
+    "antd": "^3.10.5",
     "axios": "^0.18.0",
-    "babel-plugin-import": "^1.10.0",
-    "bizcharts": "^3.2.4",
+    "babel-plugin-import": "^1.11.0",
+    "bizcharts": "^3.2.5-beta.4",
     "http-proxy-middleware": "^0.19.0",
     "idx": "^2.4.0",
     "is-promise": "^2.1.0",
     "json-loader": "^0.5.7",
     "lodash": "^4.17.11",
     "merge": ">=1.2.1",
-    "node-sass": "^4.9.4",
-    "react": "^16.5.2",
+    "node-sass": "^4.10.0",
+    "react": "^16.6.1",
     "react-app-polyfill": "^0.1.3",
     "react-app-rewired": "^1.6.2",
-    "react-dom": "^16.5.2",
+    "react-dom": "^16.6.1",
     "react-helmet": "^5.2.0",
     "react-iframe": "^1.3.3",
     "react-loadable": "^5.5.0",
     "react-markdown": "^4.0.3",
     "react-metrics": "^2.4.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.0.5",
-    "styled-components": "^4.0.2",
+    "react-scripts": "2.1.1",
+    "styled-components": "^4.0.3",
     "swagger-js-codegen": "^1.12.0",
-    "swagger-ts-generator": "^1.1.47",
+    "swagger-ts-generator": "^1.1.48",
     "uppy": "^0.28.0",
     "yaml-loader": "^0.5.0",
     "yeast": "^0.1.2"
@@ -45,8 +45,8 @@
     "clean:swagger": "rimraf src/swagger"
   },
   "devDependencies": {
-    "customize-cra": "^0.1.1",
-    "image-webpack-loader": "^4.4.0",
+    "customize-cra": "^0.2.3",
+    "image-webpack-loader": "^4.5.0",
     "npm-run-all": "^4.1.3",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.6.2"
