--- a/package.json
+++ b/package.json
@@ -3,13 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^1.1.15",
+    "@ant-design/icons-react": "^1.1.2",
+    "@antv/component": "^0.2.2",
     "@antv/data-set": "^0.10.1",
+    "@antv/f2": "^3.2.4",
+    "@antv/g2": "^3.3.4",
+    "@antv/g6": "^2.1.5",
     "@ibm/plex": "^1.2.1",
     "@uppy/react": "^0.28.0",
+    "ant-design-pro": "^2.1.1",
     "antd": "^3.10.5",
+    "antd-mobile": "^2.2.6",
     "axios": "^0.18.0",
     "babel-plugin-import": "^1.11.0",
     "bizcharts": "^3.2.5-beta.4",
+    "d3-flame-graph": "^2.0.6",
     "http-proxy-middleware": "^0.19.0",
     "idx": "^2.4.0",
     "is-promise": "^2.1.0",
@@ -17,10 +26,18 @@
     "lodash": "^4.17.11",
     "merge": ">=1.2.1",
     "node-sass": "^4.10.0",
+    "rc-animate": "^2.5.4",
+    "rc-banner-anim": "^2.1.1",
+    "rc-queue-anim": "^1.6.7",
+    "rc-scroll-anim": "^2.5.6",
+    "rc-texty": "^0.2.0",
+    "rc-tween-one": "^2.2.16",
     "react": "^16.6.1",
     "react-app-polyfill": "^0.1.3",
     "react-app-rewired": "^1.6.2",
+    "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.6.1",
+    "react-fittext": "^1.0.0",
     "react-helmet": "^5.2.0",
     "react-iframe": "^1.3.3",
     "react-loadable": "^5.5.0",
