--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "antd": "^3.10.5",
     "antd-mobile": "^2.2.6",
     "axios": "^0.18.0",
-    "babel-plugin-import": "^1.11.0",
     "bizcharts": "^3.2.5-beta.4",
     "d3-flame-graph": "^2.0.6",
+    "gg-editor": "^1.3.3",
     "http-proxy-middleware": "^0.19.0",
     "idx": "^2.4.0",
     "is-promise": "^2.1.0",
@@ -62,6 +62,7 @@
     "clean:swagger": "rimraf src/swagger"
   },
   "devDependencies": {
+    "babel-plugin-import": "^1.11.0",
     "customize-cra": "^0.2.3",
     "image-webpack-loader": "^4.5.0",
     "npm-run-all": "^4.1.3",
