--- a/package.json
+++ b/package.json
@@ -17,15 +17,18 @@
     "antd-mobile": "^2.2.6",
     "axios": "^0.18.0",
     "bizcharts": "^3.2.5-beta.4",
+    "culori": "^0.7.3",
     "d3-flame-graph": "^2.0.6",
     "gg-editor": "^1.3.3",
     "http-proxy-middleware": "^0.19.0",
     "idx": "^2.4.0",
     "is-promise": "^2.1.0",
+    "js-yaml": "^3.12.0",
     "json-loader": "^0.5.7",
     "lodash": "^4.17.11",
     "merge": ">=1.2.1",
     "node-sass": "^4.10.0",
+    "nprogress": "^0.2.0",
     "rc-animate": "^2.5.4",
     "rc-banner-anim": "^2.1.1",
     "rc-queue-anim": "^1.6.7",
@@ -35,6 +38,7 @@
     "react": "^16.6.1",
     "react-app-polyfill": "^0.1.3",
     "react-app-rewired": "^1.6.2",
+    "react-contextmenu": "^2.10.0",
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.6.1",
     "react-fittext": "^1.0.0",
@@ -45,10 +49,13 @@
     "react-metrics": "^2.4.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
+    "react-syntax-highlighter": "^10.0.1",
     "styled-components": "^4.0.3",
     "swagger-js-codegen": "^1.12.0",
     "swagger-ts-generator": "^1.1.48",
     "uppy": "^0.28.0",
+    "viser-react": "^2.4.1",
+    "viz.js": "^2.0.0",
     "yaml-loader": "^0.5.0",
     "yeast": "^0.1.2"
   },
@@ -67,6 +74,7 @@
     "image-webpack-loader": "^4.5.0",
     "npm-run-all": "^4.1.3",
     "raw-loader": "^0.5.1",
+    "react-app-rewire-less": "^2.1.3",
     "rimraf": "^2.6.2"
   },
   "browserslist": [
