--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "image-webpack-loader": "^4.5.0",
     "npm-run-all": "^4.1.3",
     "raw-loader": "^0.5.1",
+    "react-app-rewire-idx": "^1.0.1",
     "react-app-rewire-less": "^2.1.3",
     "rimraf": "^2.6.2"
   },
